# chinese-medicine-clinics-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  go.mod  (+3 more)
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  chinesemedicineclinics_sdk.py  chinesemedicineclinics_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  spec.py
py/entity/: annual_attendances_en_entity.py  annual_attendances_sc_entity.py  annual_attendances_tc_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  test_feature.py
py/test/: runner.py  test_annual_attendances_en_direct.py  test_annual_attendances_en_entity.py  test_annual_attendances_sc_direct.py  test_annual_attendances_sc_entity.py  test_annual_attendances_tc_direct.py  test_annual_attendances_tc_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  fetcher.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_params.py  prepare_query.py  register.py  result_headers.py  transform_request.py  transform_response.py
(+467 files in other folders)
