[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxgig-sdk-chinese-medicine-clinics"
version = "0.0.1"
description = "Unofficial generated Python SDK for the Chinese Medicine Clinics public API. Not affiliated with or endorsed by the upstream API provider."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["voxgig", "sdk", "generated-sdk", "openapi", "api-client", "chinese-medicine-clinics"]
dependencies = [
    "requests>=2.33",
]

[project.urls]
Homepage = "https://github.com/voxgig-sdk/chinese-medicine-clinics-sdk"
Repository = "https://github.com/voxgig-sdk/chinese-medicine-clinics-sdk"
Issues = "https://github.com/voxgig-sdk/chinese-medicine-clinics-sdk/issues"

# Explicit package list — setuptools auto-discovery refuses to pick when
# multiple top-level dirs (core/entity/feature/utility) are present.
[tool.setuptools.packages.find]
include = ["core*", "entity*", "feature*", "utility*"]
